fix: use lazysizes and add localized titles to iframes, adjust fitvids to query data-src instead of src

--- a/i18n/locales/es/translations.json
+++ b/i18n/locales/es/translations.json
@@ -53,6 +53,7 @@
       "zh": "Chino"
     }
   },
+  "embed-title": "Contenido incrustado",
   "footer": {
     "tax-exempt-status": "freeCodeCamp es una organización sin fines de lucro exenta de impuestos 501(c)(3) respaldada por donantes (Número de identificación fiscal federal de los Estados Unidos: 82-0779546)",
     "mission-statement": "Nuestra misión: ayudar a las personas a aprender a programar de forma gratuita. Logramos esto mediante la creación de miles de videos, artículos y lecciones de programación interactivas, todos disponibles gratuitamente para el público. También tenemos miles de grupos de estudio de FreeCodeCamp en todo el mundo.",
