--- a/i18n/locales/zh/translations.json
+++ b/i18n/locales/zh/translations.json
@@ -50,6 +50,7 @@
       "zh": "中文"
     }
   },
+  "embed-title": "嵌入内容",
   "footer": {
     "tax-exempt-status": "freeCodeCamp 是捐助者支持的 501(c)(3) 条款下具有免税资格的非营利性组织（税号：82-0779546)。",
     "mission-statement": "我们的使命：帮助人们免费学习编程。我们通过创建成千上万的视频、文章和交互式编程课程——所有内容向公众免费开放——来实现这一目标。学员在世界各地自发成立数千个 freeCodeCamp 学习小组。",
