--- a/i18n/locales/en/translations.json
+++ b/i18n/locales/en/translations.json
@@ -11,7 +11,7 @@
     "label": "Search",
     "accessible-name": "Submit your search query",
     "placeholder": "Search 7,000+ tutorials",
-    "see-results": "See all results for {{searchQuery}}",
+    "see-results": "See all results for {{ searchQuery }}",
     "no-tutorials": "No tutorials found"
   },
   "banner": {
@@ -21,16 +21,16 @@
     "page": {
       "no-posts": "No posts",
       "one-post": "1 post",
-      "multiple-posts": "{{postCount}} posts"
+      "multiple-posts": "{{ postCount }} posts"
     },
     "byline": {
-      "read-more": "Read <a href='{{authorUrl}}'>more posts</a> by this author"
+      "read-more": "Read <a href='{{ url }}'>more posts</a> by this {{ role }}"
     }
   },
   "tag-page": {
     "collection-of-posts": "A collection of posts",
     "one-post": "A collection of 1 post",
-    "multiple-posts": "A collection of {{postCount}} posts"
+    "multiple-posts": "A collection of {{ postCount }} posts"
   },
   "404-page": {
     "page-not-found": "Page not found",
@@ -39,14 +39,17 @@
   "social-row": {
     "author-has-twitter": "If you read this far, tweet to the author to show them you care.",
     "author-no-twitter": "If this article was helpful",
-    "default-tweet": "Thank you {{twitter}} for writing this helpful article"
+    "default-tweet": "Thank you {{ twitter }} for writing this helpful article"
   },
   "learn-to-code-cta": {
     "text": "Learn to code for free. freeCodeCamp's open source curriculum has helped more than 40,000 people get jobs as developers."
   },
   "localization-meta": {
-    "author": "Author: {{authorName}}",
-    "translator": "Translator: {{translatorName}}",
+    "roles": {
+      "author": "author",
+      "translator": "translator"
+    },
+    "card-name": "{{ role }}: {{ name }}",
     "languages": {
       "en": "English",
       "es": "Spanish",
