feat: add portuguese and italian to translations.json

--- a/i18n/locales/chinese/translations.json
+++ b/i18n/locales/chinese/translations.json
@@ -50,7 +50,9 @@
     "languages": {
       "en": "英语",
       "es": "西班牙语",
-      "zh": "中文"
+      "zh": "中文",
+      "pt-br": "葡萄牙语",
+      "it": "意大利语"
     }
   },
   "embed-title": "嵌入内容",
