--- a/i18n/locales/italian/translations.json
+++ b/i18n/locales/italian/translations.json
@@ -53,7 +53,9 @@
     "languages": {
       "en": "Inglese",
       "es": "Spagnolo",
-      "zh": "Cinese"
+      "zh": "Cinese",
+      "pt-br": "Portoghese",
+      "it": "Italiano"
     }
   },
   "embed-title": "Contenuto incorporato",
