--- a/i18n/locales/italian/translations.json
+++ b/i18n/locales/italian/translations.json
@@ -63,8 +63,7 @@
     "tax-exempt-status": "freeCodeCamp è una organizazione no-profit 501(c)(3) esentasse supportata da donazioni (Numero di identificazione per le tasse federali nelgi Stati Uniti d'America: 82-0779546)",
     "mission-statement": "La nostra missione: aiutare le persone a imparare a programamre gratuitamente. Portiamo avanti la nostra missione creanto centinaia di video, articoli, e lezioni di programmazione interattive, tutti disponibile gratuitamente al pubblico. Abbiamo anche migliaia di gruppi di studi di freeCodeCamp aootrno al monsto.",
     "donation-initiatives": "Le donazioni a freeCodeCamp supportano le nostre iniziative di educazione e aiutano a pagare i server, i servizi e lo staff.",
-    "donate-text": "Puoi",
-    "donate-link": "fare una donazione qui",
+    "donate-link": "Puoi {{ <0> }}fare una donazione qui{{ </0> }}.",
     "trending-guides": "Articoli più cliccati",
     "our-nonprofit": "La nostra no-profit",
     "links": {
