--- a/i18n/locales/english/translations.json
+++ b/i18n/locales/english/translations.json
@@ -24,7 +24,7 @@
       "multiple-posts": "{{ postCount }} posts"
     },
     "byline": {
-      "read-more": "Read <a href='{{ url }}'>more posts</a> by this {{ role }}."
+      "read-more": "Read {{ <0> }}more posts{{ </0> }} by this {{ role }}."
     }
   },
   "tag-page": {
