--- a/i18n/locales/english/translations.json
+++ b/i18n/locales/english/translations.json
@@ -24,7 +24,7 @@
       "multiple-posts": "{{ postCount }} posts"
     },
     "byline": {
-      "read-more": "Read <a href='{{ url }}'>more posts</a> by this {{ role }}"
+      "read-more": "Read {{ <0> }}more posts{{ </0> }} by this {{ role }}."
     }
   },
   "tag-page": {
@@ -53,7 +53,9 @@
     "languages": {
       "en": "English",
       "es": "Spanish",
-      "zh": "Chinese"
+      "zh": "Chinese",
+      "pt-br": "Portuguese",
+      "it": "Italian"
     }
   },
   "embed-title": "Embedded content",
@@ -61,8 +63,7 @@
     "tax-exempt-status": "freeCodeCamp is a donor-supported tax-exempt 501(c)(3) nonprofit organization (United States Federal Tax Identification Number: 82-0779546)",
     "mission-statement": "Our mission: to help people learn to code for free. We accomplish this by creating thousands of videos, articles, and interactive coding lessons - all freely available to the public. We also have thousands of freeCodeCamp study groups around the world.",
     "donation-initiatives": "Donations to freeCodeCamp go toward our education initiatives, and help pay for servers, services, and staff.",
-    "donate-text": "You can",
-    "donate-link": "make a tax-deductible donation here",
+    "donate-link": "You can {{ <0> }}make a tax-deductible donation here{{ </0> }}.",
     "trending-guides": "Trending Guides",
     "our-nonprofit": "Our Nonprofit",
     "links": {
