fix: move twitter links to /lang/links.json, use i18next

--- a/i18n/locales/chinese/links.json
+++ b/i18n/locales/chinese/links.json
@@ -11,5 +11,6 @@
   "coc-url": "https://chinese.freecodecamp.org/news/code-of-conduct/",
   "privacy-url": "https://www.freecodecamp.org/news/privacy-policy/",
   "tos-url": "https://www.freecodecamp.org/news/terms-of-service/",
-  "copyright-url": "https://www.freecodecamp.org/news/copyright-policy/"
+  "copyright-url": "https://www.freecodecamp.org/news/copyright-policy/",
+  "twitter-url": "https://twitter.com/freeCodeCampZH"
 }
