feat: add manual mock testing

--- a/docker-config/languages/dothraki/serve.json
+++ b/docker-config/languages/dothraki/serve.json
@@ -1,8 +1,6 @@
 {
   "directoryListing": false,
-  "rewrites": [
-    { "source": "/rss", "destination": "/rss.xml" }
-  ],
+  "rewrites": [{ "source": "/rss", "destination": "/rss.xml" }],
   "redirects": [
     {
       "source": "/@(.*)$",
