--- a/docker-config/languages/espanol/serve.json
+++ b/docker-config/languages/espanol/serve.json
@@ -1,3 +1,10 @@
 {
-  "directoryListing": false
+  "directoryListing": false,
+  "rewrites": [
+    {
+      "source": "/:authorOrTag?/:name?/rss",
+      "destination": "/:authorOrTag?/:name?/rss.xml"
+    }
+  ],
+  "redirects": []
 }
