--- a/docker-config/languages/italian/serve.json
+++ b/docker-config/languages/italian/serve.json
@@ -1,26 +1,36 @@
 {
   "directoryListing": false,
-  "rewrites": [{ "source": "/rss", "destination": "/rss.xml" }],
+  "rewrites": [
+    {
+      "source": "/:authorOrTag?/:name?/rss",
+      "destination": "/:authorOrTag?/:name?/rss.xml"
+    }
+  ],
   "redirects": [
     {
-      "source": "/@(.*)$",
-      "destination": "/author/$1"
+      "source": "/@:authorName",
+      "destination": "/italian/news/author/:authorName",
+      "type": 302
     },
     {
-      "source": "/tagged/(.*)$",
-      "destination": "/tag/$1"
+      "source": "/tagged/:tagName",
+      "destination": "/italian/news/tag/:tagName",
+      "type": 302
     },
     {
-      "source": "/archive/(.*)$",
-      "destination": "/"
+      "source": "/archive/:archiveSlug?",
+      "destination": "/italian/news/",
+      "type": 302
     },
     {
       "source": "/our-sponsors",
-      "destination": "/sponsors"
+      "destination": "https://www.freecodecamp.org/news/sponsors/",
+      "type": 302
     },
     {
       "source": "/about-freecodecamp",
-      "destination": "/about"
+      "destination": "/italian/news/about",
+      "type": 302
     }
   ]
 }
