--- a/i18n/locales/portuguese/links.json
+++ b/i18n/locales/portuguese/links.json
@@ -3,12 +3,12 @@
   "donate-url": "https://www.freecodecamp.org/portuguese/donate/",
   "banner-url": "https://chat.freecodecamp.org/home",
   "learn-to-code-cta-url": "https://www.freecodecamp.org/portuguese/learn/",
-  "about-url": "https://www.freecodecamp.org/news/about/",
+  "about-url": "https://www.freecodecamp.org/portuguese/news/sobre-o-freecodecamp-perguntas-frequentes/",
   "shop-url": "https://www.freecodecamp.org/shop/",
-  "support-url": "https://www.freecodecamp.org/news/support/",
+  "support-url": "https://www.freecodecamp.org/portuguese/news/perguntas-frequentes-sobre-suporte-tecnico-faq-do-freecodecamp/",
   "sponsors-url": "https://www.freecodecamp.org/news/sponsors/",
-  "honesty-url": "https://www.freecodecamp.org/news/academic-honesty-policy/",
-  "coc-url": "https://www.freecodecamp.org/news/code-of-conduct/",
+  "honesty-url": "https://www.freecodecamp.org/portuguese/news/politica-de-honestidade-academica-do-freecodecamp/",
+  "coc-url": "https://www.freecodecamp.org/portuguese/news/codigo-de-conduta-do-freecodecamp/",
   "privacy-url": "https://www.freecodecamp.org/news/privacy-policy/",
   "tos-url": "https://www.freecodecamp.org/news/terms-of-service/",
   "copyright-url": "https://www.freecodecamp.org/news/copyright-policy/",
