--- a/i18n/locales/english/links.json
+++ b/i18n/locales/english/links.json
@@ -1,20 +1,15 @@
 {
   "footer": {
-    "about-url": "https://www.freecodecamp.org/news/about/",
-    "shop-url": "https://www.freecodecamp.org/news/shop/",
-    "support-url": "https://www.freecodecamp.org/news/support/",
-    "sponsors-url": "https://www.freecodecamp.org/news/sponsors/",
-    "honesty-url": "https://www.freecodecamp.org/news/academic-honesty-policy/",
-    "coc-url": "https://www.freecodecamp.org/news/code-of-conduct/",
-    "privacy-url": "https://www.freecodecamp.org/news/privacy-policy/",
-    "tos-url": "https://www.freecodecamp.org/news/terms-of-service/",
-    "copyright-url": "https://www.freecodecamp.org/news/copyright-policy/"
+    "about": "https://www.freecodecamp.org/news/about/",
+    "support": "https://www.freecodecamp.org/news/support/",
+    "honesty": "https://www.freecodecamp.org/news/academic-honesty-policy/",
+    "coc": "https://www.freecodecamp.org/news/code-of-conduct/"
   },
   "nav": {
-    "forum-url": "https://forum.freecodecamp.org/",
-    "donate-url": "https://www.freecodecamp.org/donate/"
+    "forum": "https://forum.freecodecamp.org/",
+    "donate": "https://www.freecodecamp.org/donate/"
   },
-  "banner-url": "https://www.freecodecamp.org/",
-  "learn-to-code-cta-url": "https://www.freecodecamp.org/learn/",
-  "twitter-url": "https://twitter.com/freecodecamp"
+  "banner": "https://www.freecodecamp.org/",
+  "learn-to-code-cta": "https://www.freecodecamp.org/learn/",
+  "twitter": "https://twitter.com/freecodecamp"
 }
