--- a/i18n/locales/chinese/trending.json
+++ b/i18n/locales/chinese/trending.json
@@ -1,62 +1,62 @@
 {
-  "article0title": "Golang Benchmark",
-  "article0link": "https://chinese.freecodecamp.org/news/golang-benchmark/",
-  "article1title": "树莓派",
-  "article1link": "https://chinese.freecodecamp.org/news/build-a-personal-dev-server-on-a-5-dollar-raspberry-pi/",
-  "article2title": "如何发布一个网站",
-  "article2link": "https://chinese.freecodecamp.org/news/publish-a-no-code-website-in-10-minutes/",
-  "article3title": "PWA 入门与实践",
-  "article3link": "https://chinese.freecodecamp.org/news/a-brief-introduction-to-pwa/",
+  "article0title": "电脑截屏",
+  "article0link": "https://chinese.freecodecamp.org/news/how-to-screenshot-on-windows/",
+  "article1title": "程序员自学",
+  "article1link": "https://chinese.freecodecamp.org/news/how-i-learn-coding-for-eight-months-and-become-a-developer/",
+  "article2title": "AppData 文件夹",
+  "article2link": "https://chinese.freecodecamp.org/news/where-to-find-the-appdata-folder-in-windows-10/",
+  "article3title": "MongoDB Atlas",
+  "article3link": "https://chinese.freecodecamp.org/news/get-started-with-mongodb-atlas/",
   "article4title": "Git 删除分支",
   "article4link": "https://chinese.freecodecamp.org/news/how-to-delete-a-git-branch-both-locally-and-remotely/",
-  "article5title": "NPM 教程",
+  "article5title": "npm 是什么意思",
   "article5link": "https://chinese.freecodecamp.org/news/what-is-npm-a-node-package-manager-tutorial-for-beginners/",
-  "article6title": "前端开发学习路线",
-  "article6link": "https://chinese.freecodecamp.org/news/map-of-learning-front-end/",
+  "article6title": "js 字符串反转",
+  "article6link": "https://chinese.freecodecamp.org/news/how-to-reverse-a-string-in-javascript-in-3-different-ways/",
   "article7title": "谷歌小恐龙",
   "article7link": "https://chinese.freecodecamp.org/news/do-you-know-the-chrome-dino-game-millions-of-people-are-playing/",
-  "article8title": "GraphQL 教程",
-  "article8link": "https://chinese.freecodecamp.org/news/a-detailed-guide-to-graphql/",
-  "article9title": "Webpack 多入口配置",
-  "article9link": "https://chinese.freecodecamp.org/news/an-introduction-to-webpack-multi-entry-configuration/",
-  "article10title": "TypeScript",
-  "article10link": "https://chinese.freecodecamp.org/news/why-should-you-use-typescript/",
-  "article11title": "Web 开发工程师",
-  "article11link": "https://chinese.freecodecamp.org/news/the-practical-guide-to-becoming-a-professional-web-developer/",
-  "article12title": "提交第一个 PR",
-  "article12link": "https://chinese.freecodecamp.org/news/how-to-make-your-first-pull-request-on-github/",
-  "article13title": "Express ES6 支持",
-  "article13link": "https://chinese.freecodecamp.org/news/how-to-enable-es6-and-beyond-syntax-with-node-and-express/",
-  "article14title": "Python 快速排序算法",
-  "article14link": "https://chinese.freecodecamp.org/news/sorting-in-python/",
-  "article15title": "React 作品集",
-  "article15link": "https://chinese.freecodecamp.org/news/portfolio-app-using-react/",
-  "article16title": "JS 隐式类型转换",
-  "article16link": "https://chinese.freecodecamp.org/news/javascript-implicit-type-conversion/",
-  "article17title": "Deno 入门手册",
-  "article17link": "https://chinese.freecodecamp.org/news/the-deno-handbook-with-examples/",
-  "article18title": "前端和后端的区别",
-  "article18link": "https://chinese.freecodecamp.org/news/front-end-developer-vs-back-end-developer-definition-and-meaning-in-practice/",
-  "article19title": "JS 函数的 this 指向",
-  "article19link": "https://chinese.freecodecamp.org/news/javascript-this/",
-  "article20title": "GitHub Pages 部署网页",
-  "article20link": "https://chinese.freecodecamp.org/news/create-a-free-static-site-with-github-pages-in-10-minutes/",
-  "article21title": "第一门编程语言",
-  "article21link": "https://chinese.freecodecamp.org/news/what-programming-language-should-i-learn-first/",
+  "article8title": "自学编程",
+  "article8link": "https://chinese.freecodecamp.org/news/how-i-went-from-newbie-to-software-engineer-in-9-months-while-working-full-time/",
+  "article9title": "手机上开发 Web App",
+  "article9link": "https://chinese.freecodecamp.org/news/how-to-code-on-your-phone-python-pydroid-android-app-tutorial/",
+  "article10title": "Python 编程",
+  "article10link": "https://chinese.freecodecamp.org/news/python-code-examples-sample-script-coding-tutorial-for-beginners/",
+  "article11title": "计算机语言学习顺序",
+  "article11link": "https://chinese.freecodecamp.org/news/what-programming-language-should-i-learn-first/",
+  "article12title": "什么是编程",
+  "article12link": "https://chinese.freecodecamp.org/news/what-is-computer-programming-defining-software-development/",
+  "article13title": "分布式 id 号段模式",
+  "article13link": "https://chinese.freecodecamp.org/news/distributed-id/",
+  "article14title": "Python 输出换行符",
+  "article14link": "https://chinese.freecodecamp.org/news/python-new-line-and-how-to-python-print-without-a-newline/",
+  "article15title": "GraalVM",
+  "article15link": "https://chinese.freecodecamp.org/news/graalvm-summary/",
+  "article16title": "前端后端",
+  "article16link": "https://chinese.freecodecamp.org/news/front-end-developer-vs-back-end-developer-definition-and-meaning-in-practice/",
+  "article17title": "json 文件怎么注释",
+  "article17link": "https://chinese.freecodecamp.org/news/json-comment/",
+  "article18title": "编程学校",
+  "article18link": "https://chinese.freecodecamp.org/news/how-we-created-a-free-coding-school-with-the-freecodecamp-curriculum/",
+  "article19title": "UDP 和 TCP 协议区别",
+  "article19link": "https://chinese.freecodecamp.org/news/tcp-vs-udp-which-is-faster/",
+  "article20title": "自学编程从哪学起",
+  "article20link": "https://chinese.freecodecamp.org/news/how-i-went-from-newbie-to-software-engineer-in-9-months-while-working-full-time/",
+  "article21title": "about:blank 是什么意思",
+  "article21link": "https://chinese.freecodecamp.org/news/about-blank-what-does-about-blank-mean-and-why-is-it-blocked-in-chrome-and-firefox/",
   "article22title": "配置 VS Code",
   "article22link": "https://chinese.freecodecamp.org/news/how-to-set-up-vscode-to-improve-your-productivity/",
-  "article23title": "前端学习路线",
-  "article23link": "https://chinese.freecodecamp.org/news/map-of-learning-front-end/",
-  "article24title": "自学编程",
-  "article24link": "https://chinese.freecodecamp.org/news/first-line-of-code-to-226k-job-offer-in-8-months/",
-  "article25title": "Java",
-  "article25link": "https://chinese.freecodecamp.org/news/java-you-have-not-know-about/",
-  "article26title": "React 学习手册",
-  "article26link": "https://chinese.freecodecamp.org/news/the-react-handbook/",
-  "article27title": "JSON 文件注释",
-  "article27link": "https://chinese.freecodecamp.org/news/json-comment/",
-  "article28title": "Canvas 动画",
-  "article28link": "https://chinese.freecodecamp.org/news/canvas-animation-performance-optimization-practice/",
-  "article29title": "JWT 授权和认证",
-  "article29link": "https://chinese.freecodecamp.org/news/java-spring-boot-jwt-authorization-and-authentication/"
+  "article23title": "cmd 删除文件",
+  "article23link": "https://chinese.freecodecamp.org/news/cmd-delete-folder-how-to-remove-files-and-folders-in-windows/",
+  "article24title": "docker 删除镜像",
+  "article24link": "https://chinese.freecodecamp.org/news/how-to-remove-images-in-docker/",
+  "article25title": "前端工程化",
+  "article25link": "https://chinese.freecodecamp.org/news/front-end-engineering-tutorial/",
+  "article26title": "Golang Benchmark",
+  "article26link": "https://chinese.freecodecamp.org/news/golang-benchmark/",
+  "article27title": "树莓派",
+  "article27link": "https://chinese.freecodecamp.org/news/build-a-personal-dev-server-on-a-5-dollar-raspberry-pi/",
+  "article28title": "二八定律",
+  "article28link": "https://chinese.freecodecamp.org/news/the-80-20-rule-pareto-principle/",
+  "article29title": "JS 隐式类型转换",
+  "article29link": "https://chinese.freecodecamp.org/news/javascript-implicit-type-conversion/"
 }
