--- a/i18n/locales/english/trending.json
+++ b/i18n/locales/english/trending.json
@@ -1,62 +1,62 @@
 {
-  "article0link": "https://www.freecodecamp.org/news/what-is-javascript-javascript-code-explained-in-plain-english/",
   "article0title": "What is JavaScript?",
-  "article1link": "https://www.freecodecamp.org/news/linux-list-processes-how-to-check-running-processes/",
+  "article0link": "https://www.freecodecamp.org/news/what-is-javascript-javascript-code-explained-in-plain-english/",
   "article1title": "Linux List Processes",
-  "article2link": "https://www.freecodecamp.org/news/web-page-text-editor-how-to-open-html-code-in-mac-textedit/",
+  "article1link": "https://www.freecodecamp.org/news/linux-list-processes-how-to-check-running-processes/",
   "article2title": "Web Page Text Editor",
-  "article3link": "https://www.freecodecamp.org/news/what-is-open-source-software-explained-in-plain-english/",
+  "article2link": "https://www.freecodecamp.org/news/web-page-text-editor-how-to-open-html-code-in-mac-textedit/",
   "article3title": "What is Open Source?",
-  "article4link": "https://www.freecodecamp.org/news/protect-yourself-against-sim-swapping-attacks/",
+  "article3link": "https://www.freecodecamp.org/news/what-is-open-source-software-explained-in-plain-english/",
   "article4title": "Sim Swapping Attacks",
-  "article5link": "https://www.freecodecamp.org/news/rng-meaning-what-does-rng-stand-for-in-gaming/",
+  "article4link": "https://www.freecodecamp.org/news/protect-yourself-against-sim-swapping-attacks/",
   "article5title": "RNG Meaning in Gaming",
-  "article6link": "https://www.freecodecamp.org/news/the-model-view-controller-pattern-mvc-architecture-and-frameworks-explained/",
+  "article5link": "https://www.freecodecamp.org/news/rng-meaning-what-does-rng-stand-for-in-gaming/",
   "article6title": "Model View Controller",
-  "article7link": "https://www.freecodecamp.org/news/front-end-developer-what-is-front-end-development-explained-in-plain-english/",
+  "article6link": "https://www.freecodecamp.org/news/the-model-view-controller-pattern-mvc-architecture-and-frameworks-explained/",
   "article7title": "Front End Development",
-  "article8link": "https://www.freecodecamp.org/news/what-is-a-full-stack-developer-back-end-front-end-full-stack-engineer/",
+  "article7link": "https://www.freecodecamp.org/news/front-end-developer-what-is-front-end-development-explained-in-plain-english/",
   "article8title": "Full Stack Developer?",
-  "article9link": "https://www.freecodecamp.org/news/javascript-switch-case-js-switch-statement-example/",
+  "article8link": "https://www.freecodecamp.org/news/what-is-a-full-stack-developer-back-end-front-end-full-stack-engineer/",
   "article9title": "JavaScript Switch Case",
-  "article10link": "https://www.freecodecamp.org/news/bash-sleep-how-to-make-a-shell-script-wait-n-seconds-example-command/",
+  "article9link": "https://www.freecodecamp.org/news/javascript-switch-case-js-switch-statement-example/",
   "article10title": "Bash Sleep",
-  "article11link": "https://www.freecodecamp.org/news/bash-array-how-to-declare-an-array-of-strings-in-a-bash-script/",
+  "article10link": "https://www.freecodecamp.org/news/bash-sleep-how-to-make-a-shell-script-wait-n-seconds-example-command/",
   "article11title": "Bash Array",
-  "article12link": "https://www.freecodecamp.org/news/what-is-a-cv-and-how-is-it-different-from-a-resume/",
+  "article11link": "https://www.freecodecamp.org/news/bash-array-how-to-declare-an-array-of-strings-in-a-bash-script/",
   "article12title": "What is a CV?",
-  "article13link": "https://www.freecodecamp.org/news/coding-programs-101-ways-to-learn-to-code-for-free/",
+  "article12link": "https://www.freecodecamp.org/news/what-is-a-cv-and-how-is-it-different-from-a-resume/",
   "article13title": "Coding Programs",
-  "article14link": "https://www.freecodecamp.org/news/how-to-exit-vim/",
+  "article13link": "https://www.freecodecamp.org/news/coding-programs-101-ways-to-learn-to-code-for-free/",
   "article14title": "How to Exit Vim",
-  "article15link": "https://www.freecodecamp.org/news/html-line-break-how-to-break-a-line-with-the-html-br-tag/",
+  "article14link": "https://www.freecodecamp.org/news/how-to-exit-vim/",
   "article15title": "HTML Line Break",
-  "article16link": "https://www.freecodecamp.org/news/how-to-convert-a-string-to-an-int-in-c-tutorial-with-example-code/",
+  "article15link": "https://www.freecodecamp.org/news/html-line-break-how-to-break-a-line-with-the-html-br-tag/",
   "article16title": "C# String to Int",
-  "article17link": "https://www.freecodecamp.org/news/logical-fallacies-definition-fallacy-examples/",
+  "article16link": "https://www.freecodecamp.org/news/how-to-convert-a-string-to-an-int-in-c-tutorial-with-example-code/",
   "article17title": "Logical fallacies",
-  "article18link": "https://www.freecodecamp.org/news/javascript-online-html-css-js-code-editor-list-browser-ide-tools/",
+  "article17link": "https://www.freecodecamp.org/news/logical-fallacies-definition-fallacy-examples/",
   "article18title": "JavaScript Online",
-  "article19link": "https://www.freecodecamp.org/news/sql-case-statement-tutorial-with-when-then-clause-example-queries/",
+  "article18link": "https://www.freecodecamp.org/news/javascript-online-html-css-js-code-editor-list-browser-ide-tools/",
   "article19title": "SQL Case Statement",
-  "article20link": "https://www.freecodecamp.org/news/javascript-tolowercase-how-to-convert-a-string-to-lowercase-and-uppercase-in-js/",
+  "article19link": "https://www.freecodecamp.org/news/sql-case-statement-tutorial-with-when-then-clause-example-queries/",
   "article20title": "JavaScript toLowerCase",
-  "article21link": "https://www.freecodecamp.org/news/angular-ngclass-example/",
+  "article20link": "https://www.freecodecamp.org/news/javascript-tolowercase-how-to-convert-a-string-to-lowercase-and-uppercase-in-js/",
   "article21title": "Angular NgClass Example",
-  "article22link": "https://www.freecodecamp.org/news/sql-aggregate-functions-with-example-data-queries-for-beginners/",
+  "article21link": "https://www.freecodecamp.org/news/angular-ngclass-example/",
   "article22title": "SQL Aggregate Functions",
-  "article23link": "https://www.freecodecamp.org/news/what-is-web-development-how-to-become-a-web-developer-career-path/",
+  "article22link": "https://www.freecodecamp.org/news/sql-aggregate-functions-with-example-data-queries-for-beginners/",
   "article23title": "What is Web Development?",
-  "article24link": "https://www.freecodecamp.org/news/the-best-way-to-learn-python-python-programming-tutorial-for-beginners/",
+  "article23link": "https://www.freecodecamp.org/news/what-is-web-development-how-to-become-a-web-developer-career-path/",
   "article24title": "Best Way to Learn Python",
-  "article25link": "https://www.freecodecamp.org/news/word-count-in-google-docs-tutorial-counting-words-and-characters-in-a-google-doc-or-word-file/",
+  "article24link": "https://www.freecodecamp.org/news/the-best-way-to-learn-python-python-programming-tutorial-for-beginners/",
   "article25title": "Word Count in Google Docs",
-  "article26link": "https://www.freecodecamp.org/news/how-to-use-node-environment-variables-with-a-dotenv-file-for-node-js-and-npm/",
+  "article25link": "https://www.freecodecamp.org/news/word-count-in-google-docs-tutorial-counting-words-and-characters-in-a-google-doc-or-word-file/",
   "article26title": "Node Environment Variables",
-  "article27link": "https://www.freecodecamp.org/news/event-viewer-how-to-access-the-windows-10-activity-log/",
+  "article26link": "https://www.freecodecamp.org/news/how-to-use-node-environment-variables-with-a-dotenv-file-for-node-js-and-npm/",
   "article27title": "Event Viewer in Windows 10",
-  "article28link": "https://www.freecodecamp.org/news/combine-first-last-names-excel/",
+  "article27link": "https://www.freecodecamp.org/news/event-viewer-how-to-access-the-windows-10-activity-log/",
   "article28title": "Combine 1st/Last Name Excel",
-  "article29link": "https://www.freecodecamp.org/news/javascript-if-else-and-if-then-js-conditional-statements/",
-  "article29title": "JavaScript if-else & if-then"
+  "article28link": "https://www.freecodecamp.org/news/combine-first-last-names-excel/",
+  "article29title": "JavaScript if-else & if-then",
+  "article29link": "https://www.freecodecamp.org/news/javascript-if-else-and-if-then-js-conditional-statements/"
 }
