--- a/i18n/locales/chinese/translations.json
+++ b/i18n/locales/chinese/translations.json
@@ -16,9 +16,7 @@
     "show-comments": "显示评论",
     "error": "抱歉，暂时无法加载评论，请稍后再试。"
   },
-  "banner": {
-    "text": "学习编程 — <span>3,000 小时免费课程</span>"
-  },
+  "banner": "学习编程 — <span>3,000 小时免费课程</span>",
   "author": {
     "page": {
       "no-posts": "没有文章",
@@ -38,9 +36,7 @@
     "page-not-found": "页面不存在",
     "go-to-front-page": "返回上一页"
   },
-  "learn-to-code-cta": {
-    "text": "在 freeCodeCamp 免费学习编程。 freeCodeCamp 的开源课程已帮助 40,000 多人获得开发者工作。"
-  },
+  "learn-to-code-cta": "在 freeCodeCamp 免费学习编程。 freeCodeCamp 的开源课程已帮助 40,000 多人获得开发者工作。",
   "localization-meta": {
     "roles": {
       "author": "作者",
