--- a/i18n/locales/english/translations.json
+++ b/i18n/locales/english/translations.json
@@ -14,9 +14,7 @@
     "see-results": "See all results for {{ searchQuery }}",
     "no-tutorials": "No tutorials found"
   },
-  "banner": {
-    "text": "Learn to code — <span>free 3,000-hour curriculum</span>"
-  },
+  "banner": "Learn to code — <span>free 3,000-hour curriculum</span>",
   "author": {
     "page": {
       "no-posts": "No posts",
@@ -41,9 +39,7 @@
     "author-no-twitter": "If this article was helpful",
     "default-tweet": "Thank you {{ twitter }} for writing this helpful article"
   },
-  "learn-to-code-cta": {
-    "text": "Learn to code for free. freeCodeCamp's open source curriculum has helped more than 40,000 people get jobs as developers."
-  },
+  "learn-to-code-cta": "Learn to code for free. freeCodeCamp's open source curriculum has helped more than 40,000 people get jobs as developers.",
   "localization-meta": {
     "roles": {
       "author": "author",
