fix: apostrophe in english translations.json

--- a/i18n/locales/english/translations.json
+++ b/i18n/locales/english/translations.json
@@ -77,7 +77,7 @@
     }
   },
   "fallback": {
-    "message": "Your browser doesn’t support HTML5 {{ element }}.",
+    "message": "Your browser doesn't support HTML5 {{ element }}.",
     "audio": "audio",
     "video": "video"
   }
