--- a/i18n/locales/chinese/translations.json
+++ b/i18n/locales/chinese/translations.json
@@ -27,12 +27,12 @@
       "read-more": "阅读该{{ role }}的{{ <0> }}更多文章{{ </0> }}。"
     }
   },
-  "tag-page": {
+  "tag": {
     "collection-of-posts": "文章汇总",
     "one-post": "共 1 篇文章",
     "multiple-posts": "共 {{ postCount }} 篇文章"
   },
-  "404-page": {
+  "404": {
     "page-not-found": "页面不存在",
     "go-to-front-page": "返回上一页"
   },
