--- a/i18n/locales/portuguese/translations.json
+++ b/i18n/locales/portuguese/translations.json
@@ -25,12 +25,12 @@
       "read-more": "Ler {{ <0> }}mais publicações{{ </0> }} deste {{ role }}."
     }
   },
-  "tag-page": {
+  "tag": {
     "collection-of-posts": "Uma coleção de artigos",
     "one-post": "Uma coleção de 1 artigo",
     "multiple-posts": "Uma coleção de {{ postCount }} artigos"
   },
-  "404-page": {
+  "404": {
     "page-not-found": "Página não encontrada",
     "go-to-front-page": "Ir para a página inicial"
   },
