--- a/i18n/locales/english/translations.json
+++ b/i18n/locales/english/translations.json
@@ -4,7 +4,6 @@
     "donate": "Donate",
     "load-more-articles": "Load More Articles",
     "author-has-twitter": "Tweet a thanks",
-    "author-no-twitter": "tweet it",
     "learn-to-code-cta": "Get started"
   },
   "search": {
@@ -36,7 +35,7 @@
   },
   "social-row": {
     "author-has-twitter": "If you read this far, tweet to the author to show them you care.",
-    "author-no-twitter": "If this article was helpful",
+    "author-no-twitter": "If this article was helpful, {{ <0> }}tweet it{{ </0> }}.",
     "default-tweet": "Thank you {{ twitter }} for writing this helpful article"
   },
   "learn-to-code-cta": "Learn to code for free. freeCodeCamp's open source curriculum has helped more than 40,000 people get jobs as developers.",
