fix: move default tweet full stop into translation.json files

--- a/i18n/locales/espanol/translations.json
+++ b/i18n/locales/espanol/translations.json
@@ -37,7 +37,7 @@
   "social-row": {
     "author-has-twitter": "Si leíste hasta aquí, haz un tweet al autor para mostrarle que te importa su trabajo.",
     "author-no-twitter": "Si este artículo te fue útil, {{ <0> }}haz un tweet{{ </0> }}.",
-    "default-tweet": "Gracias {{ twitter }} por escribir este útil artículo"
+    "default-tweet": "Gracias {{ twitter }} por escribir este útil artículo."
   },
   "learn-to-code-cta": "Aprende a codificar de forma gratuita. El plan de estudios de código abierto de freeCodeCamp ha ayudado a más de 40,000 personas a obtener trabajos como desarrolladores.",
   "localization-meta": {
