--- a/i18n/locales/english/translations.json
+++ b/i18n/locales/english/translations.json
@@ -36,7 +36,7 @@
   "social-row": {
     "author-has-twitter": "If you read this far, tweet to the author to show them you care.",
     "author-no-twitter": "If this article was helpful, {{ <0> }}tweet it{{ </0> }}.",
-    "default-tweet": "Thank you {{ twitter }} for writing this helpful article"
+    "default-tweet": "Thank you {{ twitter }} for writing this helpful article."
   },
   "learn-to-code-cta": "Learn to code for free. freeCodeCamp's open source curriculum has helped more than 40,000 people get jobs as developers.",
   "localization-meta": {
