--- a/i18n/locales/chinese/translations.json
+++ b/i18n/locales/chinese/translations.json
@@ -18,14 +18,10 @@
   },
   "banner": "学习编程 — <span>3,000 小时免费课程</span>",
   "author": {
-    "page": {
-      "no-posts": "没有文章",
-      "one-post": "1 篇文章",
-      "multiple-posts": "{{ postCount }} 篇文章"
-    },
-    "byline": {
-      "read-more": "阅读该{{ role }}的{{ <0> }}更多文章{{ </0> }}。"
-    }
+    "no-posts": "没有文章",
+    "one-post": "1 篇文章",
+    "multiple-posts": "{{ postCount }} 篇文章",
+    "read-more": "阅读该{{ role }}的{{ <0> }}更多文章{{ </0> }}。"
   },
   "tag": {
     "collection-of-posts": "文章汇总",
